--- a/_examples/redis_engine/index.html
+++ b/_examples/redis_engine/index.html
@@ -7,7 +7,6 @@
             input[type="text"] { width: 300px; }
             .muted {color: #CCCCCC; font-size: 10px;}
         </style>
-        <script type="text/javascript" src="//ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
         <script type="text/javascript" src="https://rawgit.com/centrifugal/centrifuge-js/master/dist/centrifuge.min.js"></script>
         <script type="text/javascript">
             // helper functions to work with escaping html.
@@ -17,22 +16,21 @@
 
             const channel = "chat:index";
 
-            $(function() {
+            window.addEventListener('load', function() {
+                const input = document.getElementById("input");
+                const container = document.getElementById('messages');
 
-                var input = $("#input");
-                var container = $('#messages');
-
-                var centrifuge = new Centrifuge('ws://' + window.location.host + '/connection/websocket');
+                const centrifuge = new Centrifuge('ws://' + window.location.host + '/connection/websocket');
 
                 // bind listeners on centrifuge object instance events.
                 centrifuge.on('connect', function(ctx){
                     drawText('Connected with client ID ' + ctx.client + ' over ' + ctx.transport);
-                    input.attr("disabled", false);
+                    input.removeAttribute("disabled");
                 });
 
                 centrifuge.on('disconnect', function(ctx){
                     drawText('Disconnected: ' + ctx.reason + (ctx.reconnect?", will try to reconnect":", won't try to reconnect"));
-                    input.attr("disabled", true);
+                    input.setAttribute('disabled', 'true');
                 });
 
                 // subscribe on channel and bind various event listeners. Actual
@@ -87,17 +85,19 @@
                 }
 
                 function drawText(text) {
-                    container.prepend($('<li/>').html([(new Date()).toString(), ' ' + text].join(':')));
+                    let e = document.createElement('li');
+                    e.innerHTML = [(new Date()).toString(), ' ' + text].join(':');
+                    container.insertBefore(e, container.firstChild);
                 }
 
-                $('#form').submit(function(event) {
+                document.getElementById('form').addEventListener('submit', function(event) {
                     event.preventDefault();
-                    sub.publish({"input": input.val()}).then(function() {
+                    sub.publish({"input": input.value}).then(function() {
                         console.log('message accepted by server');
                     }, function(err) {
                         console.log('error publishing message', err);
                     });
-                    input.val('');
+                    input.value = '';
                 });
             });
         </script>
