--- a/_examples/history_pagination/index.html
+++ b/_examples/history_pagination/index.html
@@ -7,7 +7,7 @@
             input[type="text"] { width: 300px; }
             .muted {color: #CCCCCC; font-size: 10px;}
         </style>
-        <script type="text/javascript" src="https://rawgit.com/centrifugal/centrifuge-js/history_iteration/dist/centrifuge.js"></script>
+        <script type="text/javascript" src="https://rawgit.com/centrifugal/centrifuge-js/more_work_on_history_pagination/dist/centrifuge.js"></script>
         <script type="text/javascript">
             // helper functions to work with escaping html.
             const tagsToReplace = {'&': '&amp;', '<': '&lt;', '>': '&gt;'};
@@ -57,7 +57,7 @@
                             return false;
                         }
                         const pubs = resp.publications;
-                        if (pubs) {
+                        if (pubs && pubs.length > 0) {
                             for (let i in pubs) {
                                 if (!pubs.hasOwnProperty(i)) {
                                     continue
