migrate from rawgit, better comments

--- a/_examples/gin_auth/chat.html
+++ b/_examples/gin_auth/chat.html
@@ -8,7 +8,7 @@
         .muted {color: #CCCCCC;font-size: 10px;}
     </style>
     <script type="text/javascript" src="//cdn.jsdelivr.net/npm/sockjs-client@1/dist/sockjs.min.js"></script>
-    <script type="text/javascript" src="https://rawgit.com/centrifugal/centrifuge-js/master/dist/centrifuge.min.js"></script>
+    <script type="text/javascript" src="//cdn.jsdelivr.net/gh/centrifugal/centrifuge-js@master/dist/centrifuge.min.js"></script>
     <script type="text/javascript">
         // helper functions to work with escaping html.
         const tagsToReplace = {'&': '&amp;', '<': '&lt;', '>': '&gt;'};
