--- a/_examples/chat_oauth2/index.html
+++ b/_examples/chat_oauth2/index.html
@@ -3,7 +3,7 @@
     <head>
         <meta charset="utf-8">
         <title>Centrifuge + Oauth2</title>
-        <script type="text/javascript" src="https://rawgit.com/centrifugal/centrifuge-js/master/dist/centrifuge.min.js"></script>
+        <script type="text/javascript" src="//cdn.jsdelivr.net/gh/centrifugal/centrifuge-js@master/dist/centrifuge.min.js"></script>
     </head>
     <body>
         <div>
